* implement querying zonal statistics for legger classes per region * added unit test for zonal statistics * small refactoring
